force-app/main/default/objects/HRCFSL_ModList__c/HRCFSL_ModList__c.object-meta.xml
<CustomObject>
    <label>Field Action/Mod</label>
    <nameField>
        <label>Field Action/Mod</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Action/Mods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>