force-app/main/default/objects/HRCFSL_ModList__c/fields/HRCFSL_Active__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>