force-app/main/default/objects/HRCFSL_ModList__c/fields/HRCFSL_External_ID__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>