force-app/main/default/objects/HRCFSL_ModList__c/fields/HRCSVC_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>