force-app/main/default/objects/HRCFSL_ModList__c/fields/HRCSVC_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>