force-app/main/default/objects/HRCFSL_ModList__c/fields/HRCSVC_Field_Action_Mod_Owner__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Field_Action_Mod_Owner__c</fullName>
    <label>Field Action/Mod Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>